--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 PORT=4400
 
-NAME_BD=gach_bdpagos
+#NAME_BD=gach_bdpagos
+NAME_BD=pagos_local
 USER_DB=postgres
 PASS_DB=J053fo2021
-#HOST_DB=localhost
-HOST_DB=192.168.100.150
+HOST_DB=localhost
+#HOST_DB=192.168.100.150
 PORT_DB=5432
